# reduction-cuda

./: .editorconfig  CMakeLists.txt
src/: cuda_check_errors.cu  main.cu  mandelbrot.cu  reduction  reduction.cu
